parser.output
Terminals unused in grammar

   '+'
   '-'
   '*'
   '/'
   COMMENT
   COMMENTS
   AUTO
   CATCH
   CLASS
   CONST
   CO_AWAIT
   DELETE
   ENUM
   EXTERN
   FALSE
   FRIEND
   GOTO
   IMPORT
   INLINE
   NAMESPACE
   NULLPTR
   OPERATOR
   PRIVATE
   PROTECTED
   PUBLIC
   SIGNED
   SIZEOF
   STATIC
   SYNCHRONIZED
   TEMPLATE
   THIS
   THROW
   TRUE
   TRY
   TYPEDEF
   UNION
   UNSIGNED
   USING
   VIRTUAL
   TYPE
   ERROR_ID
   LETTERS
   QUETO
   DOUBLEQUETO
   SHARP


状态 67 conflicts: 1 shift/reduce
状态 99 conflicts: 2 shift/reduce
状态 114 conflicts: 2 shift/reduce
状态 131 conflicts: 2 shift/reduce
状态 150 conflicts: 1 reduce/reduce
状态 166 conflicts: 21 shift/reduce
状态 187 conflicts: 2 shift/reduce
状态 188 conflicts: 2 shift/reduce
状态 231 conflicts: 22 shift/reduce
状态 244 conflicts: 1 shift/reduce
状态 253 conflicts: 22 shift/reduce
状态 258 conflicts: 22 shift/reduce
状态 263 conflicts: 1 shift/reduce
状态 279 conflicts: 21 shift/reduce
状态 284 conflicts: 22 shift/reduce
状态 285 conflicts: 22 shift/reduce
状态 286 conflicts: 22 shift/reduce
状态 288 conflicts: 22 shift/reduce


语法

    0 $accept: tree $end

    1 tree: program

    2 program: external_declaration
    3        | program external_declaration

    4 external_declaration: var_declaration
    5                     | fun_declaration

    6 var_declaration: declaration_specifiers init_declarator_list SEMI
    7                | struct_specifier SEMI

    8 init_declarator_list: var
    9                     | assignment_expression
   10                     | init_array_or_point_assignment
   11                     | init_declarator_list COMMA assignment_expression
   12                     | init_declarator_list COMMA var
   13                     | init_declarator_list COMMA init_array_or_point_assignment

   14 init_array_or_point_assignment: array ASSIGNOP list_struct
   15                               | array ASSIGNOP LC RC
   16                               | pointer ASSIGNOP array
   17                               | array_sigle ASSIGNOP list_struct

   18 list_struct: LC content_of_list_struct RC

   19 content_of_list_struct: mininum
   20                       | list_struct
   21                       | content_of_list_struct COMMA mininum
   22                       | content_of_list_struct COMMA list_struct

   23 mininum: LETTER
   24        | STRING
   25        | number

   26 pointer: STAR id
   27        | STAR pointer

   28 struct_specifier: STRUCT id LC struct_declaration_list RC
   29                 | STRUCT id

   30 struct_declaration_list: declaration_specifiers init_declarator_list SEMI
   31                        | declaration_specifiers init_declarator_list SEMI struct_declaration_list

   32 struct_name_specifier: id id
   33                      | id id ASSIGNOP id

   34 struct_id: id DOT id

   35 paddress: ADDR id

   36 array: id array_main
   37      | NEW INT array_main
   38      | NEW CHAR array_main

   39 array_sigle: id array_special

   40 array_main: LB array_size RB array_main
   41           | LB RB array_main
   42           | LB array_size RB

   43 array_special: LB RB

   44 array_size: INT_DEX

   45 declarator: LP RP
   46           | LP params_list RP

   47 fun_declaration: declaration_specifiers id declarator compound_stmt

   48 declaration_specifiers: INT
   49                       | VOID
   50                       | FLOAT
   51                       | BOOL
   52                       | CHAR
   53                       | DOUBLE
   54                       | LONG
   55                       | SHORT
   56                       | STRING_DEFINE

   57 params_list: params
   58            | params COMMA params_list

   59 params: declaration_specifiers var

   60 var: id
   61    | array
   62    | pointer
   63    | paddress

   64 compound_stmt: LC RC
   65              | LC block_list RC

   66 block_list: block_item
   67           | block_list block_item

   68 block_item: var_declaration
   69           | statement_list

   70 statement_list: statement_list statement
   71               | statement

   72 statement: expression SEMI
   73          | compound_stmt
   74          | if_stmt
   75          | while_stmt
   76          | for_stmt
   77          | do_while_stmt
   78          | switch_stmt
   79          | BREAK SEMI
   80          | CONTINUE SEMI
   81          | return_stmt
   82          | struct_name_specifier SEMI

   83 if_stmt: IF LP expression RP statement ELSE statement
   84        | IF LP expression RP LC statement_list RC ELSE statement_list
   85        | IF LP expression RP LC statement_list RC ELSE LC statement_list RC
   86        | IF LP expression RP statement
   87        | IF LP expression RP LC statement_list RC

   88 switch_stmt: SWITCH LP id RP LC case_list RC

   89 case_list: CASE INT_DEX CL LC statement_list RC case_list
   90          | CASE INT_DEX CL LC statement_list RC
   91          | CASE INT_DEX CL statement_list case_list
   92          | CASE INT_DEX CL statement_list
   93          | CASE LETTER CL LC statement_list RC case_list
   94          | CASE LETTER CL LC statement_list RC
   95          | CASE LETTER CL statement_list case_list
   96          | CASE LETTER CL statement_list
   97          | DEFAULT CL LC statement_list RC
   98          | DEFAULT CL statement_list

   99 while_stmt: WHILE LP expression RP statement
  100           | WHILE LP expression RP LC statement_list RC

  101 do_while_stmt: DO LC statement_list RC WHILE LP expression RP SEMI

  102 for_stmt: FOR for_condition for_body

  103 for_body: statement
  104         | LC statement_list RC

  105 for_condition: LP expression SEMI expression SEMI expression RP
  106              | LP var_declaration expression SEMI expression RP
  107              | LP SEMI expression SEMI expression RP
  108              | LP SEMI SEMI expression RP
  109              | LP SEMI SEMI RP

  110 return_stmt: RETURN SEMI
  111            | RETURN expression SEMI

  112 expression: assignment_expression
  113           | simple_expression
  114           | logical_expression

  115 logical_expression: expression AND expression
  116                   | expression OR expression
  117                   | NOT expression

  118 assignment_expression: id ASSIGNOP expression
  119                      | id self_assign expression
  120                      | array ASSIGNOP additive_expression
  121                      | unary_expression

  122 self_assign: PE
  123            | ME
  124            | SE
  125            | DE

  126 unary_expression: PP id
  127                 | MM id
  128                 | postfix_expression

  129 postfix_expression: id PP
  130                   | id MM

  131 simple_expression: additive_expression
  132                  | additive_expression relop additive_expression

  133 relop: LT
  134      | LE
  135      | GT
  136      | GE
  137      | EQ
  138      | NE

  139 additive_expression: term
  140                    | additive_expression PLUS term
  141                    | additive_expression MINUS term

  142 term: factor
  143     | term STAR factor
  144     | term DIV factor

  145 factor: LP expression RP
  146       | id
  147       | call_func
  148       | number
  149       | array
  150       | paddress
  151       | pointer

  152 call_func: id LP RP
  153          | id LP args RP

  154 args: expression
  155     | expression COMMA args

  156 number: INT_HEX
  157       | INT_OCT
  158       | INT_DEX
  159       | FLOAT

  160 id: ID
  161   | struct_id


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
error (256)
INT_DEX (258) 44 89 90 91 92 158
INT_HEX (259) 156
INT_OCT (260) 157
FLOAT (261) 50 159
SEMI (262) 6 7 30 31 72 79 80 82 101 105 106 107 108 109 110 111
COMMA (263) 11 12 13 21 22 58 155
GE (264) 136
LE (265) 134
EQ (266) 137
NE (267) 138
GT (268) 135
LT (269) 133
ASSIGNOP (270) 14 15 16 17 33 118 120
PLUS (271) 140
MINUS (272) 141
STAR (273) 26 27 143
ADDR (274) 35
DIV (275) 144
AND (276) 115
OR (277) 116
DOT (278) 34
NOT (279) 117
LP (280) 45 46 83 84 85 86 87 88 99 100 101 105 106 107 108 109 145
    152 153
RP (281) 45 46 83 84 85 86 87 88 99 100 101 105 106 107 108 109 145
    152 153
LB (282) 40 41 42 43
RB (283) 40 41 42 43
LC (284) 15 18 28 64 65 84 85 87 88 89 90 93 94 97 100 101 104
RC (285) 15 18 28 64 65 84 85 87 88 89 90 93 94 97 100 101 104
COMMENT (286)
COMMENTS (287)
AUTO (288)
BOOL (289) 51
BREAK (290) 79
CASE (291) 89 90 91 92 93 94 95 96
CATCH (292)
CHAR (293) 38 52
CLASS (294)
CONST (295)
CONTINUE (296) 80
CO_AWAIT (297)
DEFAULT (298) 97 98
DELETE (299)
DO (300) 101
DOUBLE (301) 53
ELSE (302) 83 84 85
ENUM (303)
EXTERN (304)
FALSE (305)
FOR (306) 102
FRIEND (307)
GOTO (308)
IF (309) 83 84 85 86 87
IMPORT (310)
INLINE (311)
INT (312) 37 48
LONG (313) 54
NAMESPACE (314)
NEW (315) 37 38
NULLPTR (316)
OPERATOR (317)
PRIVATE (318)
PROTECTED (319)
PUBLIC (320)
RETURN (321) 110 111
SHORT (322) 55
SIGNED (323)
SIZEOF (324)
STATIC (325)
STRING_DEFINE (326) 56
STRUCT (327) 28 29
SWITCH (328) 88
SYNCHRONIZED (329)
TEMPLATE (330)
THIS (331)
THROW (332)
TRUE (333)
TRY (334)
TYPEDEF (335)
UNION (336)
UNSIGNED (337)
USING (338)
VIRTUAL (339)
VOID (340) 49
WHILE (341) 99 100 101
TYPE (342)
ID (343) 160
ERROR_ID (344)
LETTER (345) 23 93 94 95 96
LETTERS (346)
QUETO (347)
STRING (348) 24
DOUBLEQUETO (349)
SHARP (350)
PE (351) 122
ME (352) 123
SE (353) 124
DE (354) 125
PP (355) 126 129
MM (356) 127 130
CL (357) 89 90 91 92 93 94 95 96 97 98


Nonterminals, with rules where they appear

$accept (107)
    左： 0
tree (108)
    左： 1, 右： 0
program (109)
    左： 2 3, 右： 1 3
external_declaration (110)
    左： 4 5, 右： 2 3
var_declaration (111)
    左： 6 7, 右： 4 68 106
init_declarator_list (112)
    左： 8 9 10 11 12 13, 右： 6 11 12 13 30 31
init_array_or_point_assignment (113)
    左： 14 15 16 17, 右： 10 13
list_struct (114)
    左： 18, 右： 14 17 20 22
content_of_list_struct (115)
    左： 19 20 21 22, 右： 18 21 22
mininum (116)
    左： 23 24 25, 右： 19 21
pointer (117)
    左： 26 27, 右： 16 27 62 151
struct_specifier (118)
    左： 28 29, 右： 7
struct_declaration_list (119)
    左： 30 31, 右： 28 31
struct_name_specifier (120)
    左： 32 33, 右： 82
struct_id (121)
    左： 34, 右： 161
paddress (122)
    左： 35, 右： 63 150
array (123)
    左： 36 37 38, 右： 14 15 16 61 120 149
array_sigle (124)
    左： 39, 右： 17
array_main (125)
    左： 40 41 42, 右： 36 37 38 40 41
array_special (126)
    左： 43, 右： 39
array_size (127)
    左： 44, 右： 40 42
declarator (128)
    左： 45 46, 右： 47
fun_declaration (129)
    左： 47, 右： 5
declaration_specifiers (130)
    左： 48 49 50 51 52 53 54 55 56, 右： 6 30 31 47 59
params_list (131)
    左： 57 58, 右： 46 58
params (132)
    左： 59, 右： 57 58
var (133)
    左： 60 61 62 63, 右： 8 12 59
compound_stmt (134)
    左： 64 65, 右： 47 73
block_list (135)
    左： 66 67, 右： 65 67
block_item (136)
    左： 68 69, 右： 66 67
statement_list (137)
    左： 70 71, 右： 69 70 84 85 87 89 90 91 92 93 94 95 96 97
    98 100 101 104
statement (138)
    左： 72 73 74 75 76 77 78 79 80 81 82, 右： 70 71 83 86 99
    103
if_stmt (139)
    左： 83 84 85 86 87, 右： 74
switch_stmt (140)
    左： 88, 右： 78
case_list (141)
    左： 89 90 91 92 93 94 95 96 97 98, 右： 88 89 91 93 95
while_stmt (142)
    左： 99 100, 右： 75
do_while_stmt (143)
    左： 101, 右： 77
for_stmt (144)
    左： 102, 右： 76
for_body (145)
    左： 103 104, 右： 102
for_condition (146)
    左： 105 106 107 108 109, 右： 102
return_stmt (147)
    左： 110 111, 右： 81
expression (148)
    左： 112 113 114, 右： 72 83 84 85 86 87 99 100 101 105 106
    107 108 111 115 116 117 118 119 145 154 155
logical_expression (149)
    左： 115 116 117, 右： 114
assignment_expression (150)
    左： 118 119 120 121, 右： 9 11 112
self_assign (151)
    左： 122 123 124 125, 右： 119
unary_expression (152)
    左： 126 127 128, 右： 121
postfix_expression (153)
    左： 129 130, 右： 128
simple_expression (154)
    左： 131 132, 右： 113
relop (155)
    左： 133 134 135 136 137 138, 右： 132
additive_expression (156)
    左： 139 140 141, 右： 120 131 132 140 141
term (157)
    左： 142 143 144, 右： 139 140 141 143 144
factor (158)
    左： 145 146 147 148 149 150 151, 右： 142 143 144
call_func (159)
    左： 152 153, 右： 147
args (160)
    左： 154 155, 右： 153 155
number (161)
    左： 156 157 158 159, 右： 25 148
id (162)
    左： 160 161, 右： 26 28 29 32 33 34 35 36 39 47 60 88 118
    119 126 127 129 130 146 152 153


State 0

    0 $accept: . tree $end

    FLOAT          shift, and go to state 1
    BOOL           shift, and go to state 2
    CHAR           shift, and go to state 3
    DOUBLE         shift, and go to state 4
    INT            shift, and go to state 5
    LONG           shift, and go to state 6
    SHORT          shift, and go to state 7
    STRING_DEFINE  shift, and go to state 8
    STRUCT         shift, and go to state 9
    VOID           shift, and go to state 10

    tree                    转到状态 11
    program                 转到状态 12
    external_declaration    转到状态 13
    var_declaration         转到状态 14
    struct_specifier        转到状态 15
    fun_declaration         转到状态 16
    declaration_specifiers  转到状态 17


State 1

   50 declaration_specifiers: FLOAT .

    $default  reduce using rule 50 (declaration_specifiers)


State 2

   51 declaration_specifiers: BOOL .

    $default  reduce using rule 51 (declaration_specifiers)


State 3

   52 declaration_specifiers: CHAR .

    $default  reduce using rule 52 (declaration_specifiers)


State 4

   53 declaration_specifiers: DOUBLE .

    $default  reduce using rule 53 (declaration_specifiers)


State 5

   48 declaration_specifiers: INT .

    $default  reduce using rule 48 (declaration_specifiers)


State 6

   54 declaration_specifiers: LONG .

    $default  reduce using rule 54 (declaration_specifiers)


State 7

   55 declaration_specifiers: SHORT .

    $default  reduce using rule 55 (declaration_specifiers)


State 8

   56 declaration_specifiers: STRING_DEFINE .

    $default  reduce using rule 56 (declaration_specifiers)


State 9

   28 struct_specifier: STRUCT . id LC struct_declaration_list RC
   29                 | STRUCT . id

    ID  shift, and go to state 18

    struct_id  转到状态 19
    id         转到状态 20


State 10

   49 declaration_specifiers: VOID .

    $default  reduce using rule 49 (declaration_specifiers)


State 11

    0 $accept: tree . $end

    $end  shift, and go to state 21


State 12

    1 tree: program .
    3 program: program . external_declaration

    FLOAT          shift, and go to state 1
    BOOL           shift, and go to state 2
    CHAR           shift, and go to state 3
    DOUBLE         shift, and go to state 4
    INT            shift, and go to state 5
    LONG           shift, and go to state 6
    SHORT          shift, and go to state 7
    STRING_DEFINE  shift, and go to state 8
    STRUCT         shift, and go to state 9
    VOID           shift, and go to state 10

    $default  reduce using rule 1 (tree)

    external_declaration    转到状态 22
    var_declaration         转到状态 14
    struct_specifier        转到状态 15
    fun_declaration         转到状态 16
    declaration_specifiers  转到状态 17


State 13

    2 program: external_declaration .

    $default  reduce using rule 2 (program)


State 14

    4 external_declaration: var_declaration .

    $default  reduce using rule 4 (external_declaration)


State 15

    7 var_declaration: struct_specifier . SEMI

    SEMI  shift, and go to state 23


State 16

    5 external_declaration: fun_declaration .

    $default  reduce using rule 5 (external_declaration)


State 17

    6 var_declaration: declaration_specifiers . init_declarator_list SEMI
   47 fun_declaration: declaration_specifiers . id declarator compound_stmt

    STAR  shift, and go to state 24
    ADDR  shift, and go to state 25
    NEW   shift, and go to state 26
    ID    shift, and go to state 18
    PP    shift, and go to state 27
    MM    shift, and go to state 28

    init_declarator_list            转到状态 29
    init_array_or_point_assignment  转到状态 30
    pointer                         转到状态 31
    struct_id                       转到状态 19
    paddress                        转到状态 32
    array                           转到状态 33
    array_sigle                     转到状态 34
    var                             转到状态 35
    assignment_expression           转到状态 36
    unary_expression                转到状态 37
    postfix_expression              转到状态 38
    id                              转到状态 39


State 18

  160 id: ID .

    $default  reduce using rule 160 (id)


State 19

  161 id: struct_id .

    $default  reduce using rule 161 (id)


State 20

   28 struct_specifier: STRUCT id . LC struct_declaration_list RC
   29                 | STRUCT id .
   34 struct_id: id . DOT id

    DOT  shift, and go to state 40
    LC   shift, and go to state 41

    $default  reduce using rule 29 (struct_specifier)


State 21

    0 $accept: tree $end .

    $default  接受


State 22

    3 program: program external_declaration .

    $default  reduce using rule 3 (program)


State 23

    7 var_declaration: struct_specifier SEMI .

    $default  reduce using rule 7 (var_declaration)


State 24

   26 pointer: STAR . id
   27        | STAR . pointer

    STAR  shift, and go to state 24
    ID    shift, and go to state 18

    pointer    转到状态 42
    struct_id  转到状态 19
    id         转到状态 43


State 25

   35 paddress: ADDR . id

    ID  shift, and go to state 18

    struct_id  转到状态 19
    id         转到状态 44


State 26

   37 array: NEW . INT array_main
   38      | NEW . CHAR array_main

    CHAR  shift, and go to state 45
    INT   shift, and go to state 46


State 27

  126 unary_expression: PP . id

    ID  shift, and go to state 18

    struct_id  转到状态 19
    id         转到状态 47


State 28

  127 unary_expression: MM . id

    ID  shift, and go to state 18

    struct_id  转到状态 19
    id         转到状态 48


State 29

    6 var_declaration: declaration_specifiers init_declarator_list . SEMI
   11 init_declarator_list: init_declarator_list . COMMA assignment_expression
   12                     | init_declarator_list . COMMA var
   13                     | init_declarator_list . COMMA init_array_or_point_assignment

    SEMI   shift, and go to state 49
    COMMA  shift, and go to state 50


State 30

   10 init_declarator_list: init_array_or_point_assignment .

    $default  reduce using rule 10 (init_declarator_list)


State 31

   16 init_array_or_point_assignment: pointer . ASSIGNOP array
   62 var: pointer .

    ASSIGNOP  shift, and go to state 51

    $default  reduce using rule 62 (var)


State 32

   63 var: paddress .

    $default  reduce using rule 63 (var)


State 33

   14 init_array_or_point_assignment: array . ASSIGNOP list_struct
   15                               | array . ASSIGNOP LC RC
   61 var: array .
  120 assignment_expression: array . ASSIGNOP additive_expression

    ASSIGNOP  shift, and go to state 52

    $default  reduce using rule 61 (var)


State 34

   17 init_array_or_point_assignment: array_sigle . ASSIGNOP list_struct

    ASSIGNOP  shift, and go to state 53


State 35

    8 init_declarator_list: var .

    $default  reduce using rule 8 (init_declarator_list)


State 36

    9 init_declarator_list: assignment_expression .

    $default  reduce using rule 9 (init_declarator_list)


State 37

  121 assignment_expression: unary_expression .

    $default  reduce using rule 121 (assignment_expression)


State 38

  128 unary_expression: postfix_expression .

    $default  reduce using rule 128 (unary_expression)


State 39

   34 struct_id: id . DOT id
   36 array: id . array_main
   39 array_sigle: id . array_special
   47 fun_declaration: declaration_specifiers id . declarator compound_stmt
   60 var: id .
  118 assignment_expression: id . ASSIGNOP expression
  119                      | id . self_assign expression
  129 postfix_expression: id . PP
  130                   | id . MM

    ASSIGNOP  shift, and go to state 54
    DOT       shift, and go to state 40
    LP        shift, and go to state 55
    LB        shift, and go to state 56
    PE        shift, and go to state 57
    ME        shift, and go to state 58
    SE        shift, and go to state 59
    DE        shift, and go to state 60
    PP        shift, and go to state 61
    MM        shift, and go to state 62

    $default  reduce using rule 60 (var)

    array_main     转到状态 63
    array_special  转到状态 64
    declarator     转到状态 65
    self_assign    转到状态 66


State 40

   34 struct_id: id DOT . id

    ID  shift, and go to state 18

    struct_id  转到状态 19
    id         转到状态 67


State 41

   28 struct_specifier: STRUCT id LC . struct_declaration_list RC

    FLOAT          shift, and go to state 1
    BOOL           shift, and go to state 2
    CHAR           shift, and go to state 3
    DOUBLE         shift, and go to state 4
    INT            shift, and go to state 5
    LONG           shift, and go to state 6
    SHORT          shift, and go to state 7
    STRING_DEFINE  shift, and go to state 8
    VOID           shift, and go to state 10

    struct_declaration_list  转到状态 68
    declaration_specifiers   转到状态 69


State 42

   27 pointer: STAR pointer .

    $default  reduce using rule 27 (pointer)


State 43

   26 pointer: STAR id .
   34 struct_id: id . DOT id

    DOT  shift, and go to state 40

    $default  reduce using rule 26 (pointer)


State 44

   34 struct_id: id . DOT id
   35 paddress: ADDR id .

    DOT  shift, and go to state 40

    $default  reduce using rule 35 (paddress)


State 45

   38 array: NEW CHAR . array_main

    LB  shift, and go to state 70

    array_main  转到状态 71


State 46

   37 array: NEW INT . array_main

    LB  shift, and go to state 70

    array_main  转到状态 72


State 47

   34 struct_id: id . DOT id
  126 unary_expression: PP id .

    DOT  shift, and go to state 40

    $default  reduce using rule 126 (unary_expression)


State 48

   34 struct_id: id . DOT id
  127 unary_expression: MM id .

    DOT  shift, and go to state 40

    $default  reduce using rule 127 (unary_expression)


State 49

    6 var_declaration: declaration_specifiers init_declarator_list SEMI .

    $default  reduce using rule 6 (var_declaration)


State 50

   11 init_declarator_list: init_declarator_list COMMA . assignment_expression
   12                     | init_declarator_list COMMA . var
   13                     | init_declarator_list COMMA . init_array_or_point_assignment

    STAR  shift, and go to state 24
    ADDR  shift, and go to state 25
    NEW   shift, and go to state 26
    ID    shift, and go to state 18
    PP    shift, and go to state 27
    MM    shift, and go to state 28

    init_array_or_point_assignment  转到状态 73
    pointer                         转到状态 31
    struct_id                       转到状态 19
    paddress                        转到状态 32
    array                           转到状态 33
    array_sigle                     转到状态 34
    var                             转到状态 74
    assignment_expression           转到状态 75
    unary_expression                转到状态 37
    postfix_expression              转到状态 38
    id                              转到状态 76


State 51

   16 init_array_or_point_assignment: pointer ASSIGNOP . array

    NEW  shift, and go to state 26
    ID   shift, and go to state 18

    struct_id  转到状态 19
    array      转到状态 77
    id         转到状态 78


State 52

   14 init_array_or_point_assignment: array ASSIGNOP . list_struct
   15                               | array ASSIGNOP . LC RC
  120 assignment_expression: array ASSIGNOP . additive_expression

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    STAR     shift, and go to state 24
    ADDR     shift, and go to state 25
    LP       shift, and go to state 83
    LC       shift, and go to state 84
    NEW      shift, and go to state 26
    ID       shift, and go to state 18

    list_struct          转到状态 85
    pointer              转到状态 86
    struct_id            转到状态 19
    paddress             转到状态 87
    array                转到状态 88
    additive_expression  转到状态 89
    term                 转到状态 90
    factor               转到状态 91
    call_func            转到状态 92
    number               转到状态 93
    id                   转到状态 94


State 53

   17 init_array_or_point_assignment: array_sigle ASSIGNOP . list_struct

    LC  shift, and go to state 95

    list_struct  转到状态 96


State 54

  118 assignment_expression: id ASSIGNOP . expression

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    STAR     shift, and go to state 24
    ADDR     shift, and go to state 25
    NOT      shift, and go to state 97
    LP       shift, and go to state 83
    NEW      shift, and go to state 26
    ID       shift, and go to state 18
    PP       shift, and go to state 27
    MM       shift, and go to state 28

    pointer                转到状态 86
    struct_id              转到状态 19
    paddress               转到状态 87
    array                  转到状态 98
    expression             转到状态 99
    logical_expression     转到状态 100
    assignment_expression  转到状态 101
    unary_expression       转到状态 37
    postfix_expression     转到状态 38
    simple_expression      转到状态 102
    additive_expression    转到状态 103
    term                   转到状态 90
    factor                 转到状态 91
    call_func              转到状态 92
    number                 转到状态 93
    id                     转到状态 104


State 55

   45 declarator: LP . RP
   46           | LP . params_list RP

    FLOAT          shift, and go to state 1
    RP             shift, and go to state 105
    BOOL           shift, and go to state 2
    CHAR           shift, and go to state 3
    DOUBLE         shift, and go to state 4
    INT            shift, and go to state 5
    LONG           shift, and go to state 6
    SHORT          shift, and go to state 7
    STRING_DEFINE  shift, and go to state 8
    VOID           shift, and go to state 10

    declaration_specifiers  转到状态 106
    params_list             转到状态 107
    params                  转到状态 108


State 56

   40 array_main: LB . array_size RB array_main
   41           | LB . RB array_main
   42           | LB . array_size RB
   43 array_special: LB . RB

    INT_DEX  shift, and go to state 109
    RB       shift, and go to state 110

    array_size  转到状态 111


State 57

  122 self_assign: PE .

    $default  reduce using rule 122 (self_assign)


State 58

  123 self_assign: ME .

    $default  reduce using rule 123 (self_assign)


State 59

  124 self_assign: SE .

    $default  reduce using rule 124 (self_assign)


State 60

  125 self_assign: DE .

    $default  reduce using rule 125 (self_assign)


State 61

  129 postfix_expression: id PP .

    $default  reduce using rule 129 (postfix_expression)


State 62

  130 postfix_expression: id MM .

    $default  reduce using rule 130 (postfix_expression)


State 63

   36 array: id array_main .

    $default  reduce using rule 36 (array)


State 64

   39 array_sigle: id array_special .

    $default  reduce using rule 39 (array_sigle)


State 65

   47 fun_declaration: declaration_specifiers id declarator . compound_stmt

    LC  shift, and go to state 112

    compound_stmt  转到状态 113


State 66

  119 assignment_expression: id self_assign . expression

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    STAR     shift, and go to state 24
    ADDR     shift, and go to state 25
    NOT      shift, and go to state 97
    LP       shift, and go to state 83
    NEW      shift, and go to state 26
    ID       shift, and go to state 18
    PP       shift, and go to state 27
    MM       shift, and go to state 28

    pointer                转到状态 86
    struct_id              转到状态 19
    paddress               转到状态 87
    array                  转到状态 98
    expression             转到状态 114
    logical_expression     转到状态 100
    assignment_expression  转到状态 101
    unary_expression       转到状态 37
    postfix_expression     转到状态 38
    simple_expression      转到状态 102
    additive_expression    转到状态 103
    term                   转到状态 90
    factor                 转到状态 91
    call_func              转到状态 92
    number                 转到状态 93
    id                     转到状态 104


State 67

   34 struct_id: id . DOT id
   34          | id DOT id .

    DOT  shift, and go to state 40

    DOT       [reduce using rule 34 (struct_id)]
    $default  reduce using rule 34 (struct_id)


State 68

   28 struct_specifier: STRUCT id LC struct_declaration_list . RC

    RC  shift, and go to state 115


State 69

   30 struct_declaration_list: declaration_specifiers . init_declarator_list SEMI
   31                        | declaration_specifiers . init_declarator_list SEMI struct_declaration_list

    STAR  shift, and go to state 24
    ADDR  shift, and go to state 25
    NEW   shift, and go to state 26
    ID    shift, and go to state 18
    PP    shift, and go to state 27
    MM    shift, and go to state 28

    init_declarator_list            转到状态 116
    init_array_or_point_assignment  转到状态 30
    pointer                         转到状态 31
    struct_id                       转到状态 19
    paddress                        转到状态 32
    array                           转到状态 33
    array_sigle                     转到状态 34
    var                             转到状态 35
    assignment_expression           转到状态 36
    unary_expression                转到状态 37
    postfix_expression              转到状态 38
    id                              转到状态 76


State 70

   40 array_main: LB . array_size RB array_main
   41           | LB . RB array_main
   42           | LB . array_size RB

    INT_DEX  shift, and go to state 109
    RB       shift, and go to state 117

    array_size  转到状态 111


State 71

   38 array: NEW CHAR array_main .

    $default  reduce using rule 38 (array)


State 72

   37 array: NEW INT array_main .

    $default  reduce using rule 37 (array)


State 73

   13 init_declarator_list: init_declarator_list COMMA init_array_or_point_assignment .

    $default  reduce using rule 13 (init_declarator_list)


State 74

   12 init_declarator_list: init_declarator_list COMMA var .

    $default  reduce using rule 12 (init_declarator_list)


State 75

   11 init_declarator_list: init_declarator_list COMMA assignment_expression .

    $default  reduce using rule 11 (init_declarator_list)


State 76

   34 struct_id: id . DOT id
   36 array: id . array_main
   39 array_sigle: id . array_special
   60 var: id .
  118 assignment_expression: id . ASSIGNOP expression
  119                      | id . self_assign expression
  129 postfix_expression: id . PP
  130                   | id . MM

    ASSIGNOP  shift, and go to state 54
    DOT       shift, and go to state 40
    LB        shift, and go to state 56
    PE        shift, and go to state 57
    ME        shift, and go to state 58
    SE        shift, and go to state 59
    DE        shift, and go to state 60
    PP        shift, and go to state 61
    MM        shift, and go to state 62

    $default  reduce using rule 60 (var)

    array_main     转到状态 63
    array_special  转到状态 64
    self_assign    转到状态 66


State 77

   16 init_array_or_point_assignment: pointer ASSIGNOP array .

    $default  reduce using rule 16 (init_array_or_point_assignment)


State 78

   34 struct_id: id . DOT id
   36 array: id . array_main

    DOT  shift, and go to state 40
    LB   shift, and go to state 70

    array_main  转到状态 63


State 79

  158 number: INT_DEX .

    $default  reduce using rule 158 (number)


State 80

  156 number: INT_HEX .

    $default  reduce using rule 156 (number)


State 81

  157 number: INT_OCT .

    $default  reduce using rule 157 (number)


State 82

  159 number: FLOAT .

    $default  reduce using rule 159 (number)


State 83

  145 factor: LP . expression RP

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    STAR     shift, and go to state 24
    ADDR     shift, and go to state 25
    NOT      shift, and go to state 97
    LP       shift, and go to state 83
    NEW      shift, and go to state 26
    ID       shift, and go to state 18
    PP       shift, and go to state 27
    MM       shift, and go to state 28

    pointer                转到状态 86
    struct_id              转到状态 19
    paddress               转到状态 87
    array                  转到状态 98
    expression             转到状态 118
    logical_expression     转到状态 100
    assignment_expression  转到状态 101
    unary_expression       转到状态 37
    postfix_expression     转到状态 38
    simple_expression      转到状态 102
    additive_expression    转到状态 103
    term                   转到状态 90
    factor                 转到状态 91
    call_func              转到状态 92
    number                 转到状态 93
    id                     转到状态 104


State 84

   15 init_array_or_point_assignment: array ASSIGNOP LC . RC
   18 list_struct: LC . content_of_list_struct RC

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    LC       shift, and go to state 95
    RC       shift, and go to state 119
    LETTER   shift, and go to state 120
    STRING   shift, and go to state 121

    list_struct             转到状态 122
    content_of_list_struct  转到状态 123
    mininum                 转到状态 124
    number                  转到状态 125


State 85

   14 init_array_or_point_assignment: array ASSIGNOP list_struct .

    $default  reduce using rule 14 (init_array_or_point_assignment)


State 86

  151 factor: pointer .

    $default  reduce using rule 151 (factor)


State 87

  150 factor: paddress .

    $default  reduce using rule 150 (factor)


State 88

  149 factor: array .

    $default  reduce using rule 149 (factor)


State 89

  120 assignment_expression: array ASSIGNOP additive_expression .
  140 additive_expression: additive_expression . PLUS term
  141                    | additive_expression . MINUS term

    PLUS   shift, and go to state 126
    MINUS  shift, and go to state 127

    $default  reduce using rule 120 (assignment_expression)


State 90

  139 additive_expression: term .
  143 term: term . STAR factor
  144     | term . DIV factor

    STAR  shift, and go to state 128
    DIV   shift, and go to state 129

    $default  reduce using rule 139 (additive_expression)


State 91

  142 term: factor .

    $default  reduce using rule 142 (term)


State 92

  147 factor: call_func .

    $default  reduce using rule 147 (factor)


State 93

  148 factor: number .

    $default  reduce using rule 148 (factor)


State 94

   34 struct_id: id . DOT id
   36 array: id . array_main
  146 factor: id .
  152 call_func: id . LP RP
  153          | id . LP args RP

    DOT  shift, and go to state 40
    LP   shift, and go to state 130
    LB   shift, and go to state 70

    $default  reduce using rule 146 (factor)

    array_main  转到状态 63


State 95

   18 list_struct: LC . content_of_list_struct RC

    INT_DEX  shift, and go to state 79
    INT_HEX  shift, and go to state 80
    INT_OCT  shift, and go to state 81
    FLOAT    shift, and go to state 82
    LC       shift, and go to state 95
    LETTER   shift, and go to state 120
    STRING   shift, and go to state 121
